--- a/src/2-form.html
+++ b/src/2-form.html
@@ -2,30 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Form</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/reset.css" />
+
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./index.html">Home page</a></li>
-    </ul>
-
+    <section>
+      <a class="link" href="./index.html">Go to home</a>
+      <h1>Page Form</h1>
+    </section>
     <form class="feedback-form" autocomplete="off">
       <label>
-        Email
-        <input type="email" name="email" autofocus />
+        <span>Email</span>
+        <input class="js-input" type="email" name="email" autofocus />
       </label>
       <label>
-        Message
+        <span>Message</span>
         <textarea name="message" rows="8"></textarea>
       </label>
       <button type="submit">Submit</button>
