--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 9</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
+    <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
-    </ul>
+    <nav>
+      <ul >
+        <li class="link"><a href="1-gallery.html">Gallery</a></li>
+        <li class="link"><a href="2-form.html">Form</a></li>
+      </ul>
+    </nav>
+    <!-- <script type="module" src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/2-form.js"></script> -->
+    
   </body>
 </html>
