--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -2,24 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/1-gallery.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./2-form.html">Form</a></li>
-      <li><a href="./index.html">Home page</a></li>
-    </ul>
+    <section>
+      <a class="link" href="./index.html">Go to home</a>
+      <h1>Page Gallery</h1>
+    </section>
 
-    <ul class="gallery"></ul>
+    <section>
+      <ul class="gallery"></ul>
+    </section>
 
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
